--- a/package.json
+++ b/package.json
@@ -1,15 +1,10 @@
 {
   "private": true,
   "scripts": {
-    "build": "turbo build",
-    "dev": "turbo dev",
-    "lint": "turbo lint",
-    "clean": "turbo clean"
   },
   "devDependencies": {
     "eslint": "^8.48.0",
-    "tsconfig": "*",
-    "turbo": "latest"
+    "tsconfig": "*"
   },
   "packageManager": "npm@9.5.0",
   "workspaces": [
