--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -3,7 +3,5 @@
   "license": "MIT",
   "version": "0.0.0",
   "private": true,
-  "devDependencies": {
-    "eslint-config-turbo": "^1.10.12"
-  }
+  "devDependencies": {}
 }
